# blog-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  init.sql
.github/workflows/: docker-image.yml
public/: index.html
src/: handlers.rs  main.rs  models.rs  templates.rs
