[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["default", "multipart"]}
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "json", "sqlite"]}
serde = "1.0.214"
axum-macros = "0.4.2"
uuid = { version = "1.11.0", features = ["v4"]}
tower-http = { version = "0.6.1", features = ["fs", "trace"]}
chrono = "0.4.38"